compiler/tests/snapshots/snapshots__snapshot_lexer_errors.snap
---
source: compiler/tests/snapshots.rs
expression: "token_dump(\"val x = @\")"
---
Val("val") @1:1
Ident("x") @1:5
Assign("=") @1:7
At("@") @1:9
EOF
