compiler/tests/snapshots/snapshots__snapshot_lexer_raw_string.snap
---
source: compiler/tests/snapshots.rs
expression: "token_dump(\"\\\"\\\"\\\"raw\\nmulti-line\\\"\\\"\\\"\")"
---
StringLiteral("raw\nmulti-line") @1:1
EOF
