compiler/tests/snapshots/snapshots__snapshot_lexer_string_interpolation.snap
---
source: compiler/tests/snapshots.rs
expression: "token_dump(\"\\\"hello $name, sum = ${a + b}\\\"\")"
---
StringLiteral("hello name, sum = a + b") @1:1
EOF
